--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
-
+{% block title %}
+    Contact Us
+{% endblock title %}
 {% block content %}
 <section id="contact" class="py-5">
     <div class="container">
@@ -23,8 +25,8 @@
                 </form>
             </div>
             <div class="col-md-6">
-                <p><strong>Address:</strong> Istiklal Caddesi, Istanbul, Turkey</p>
-                <p><strong>Phone:</strong> +90 212 555 1234</p>
+                <p><strong>Address:</strong> Kavaklı mh. Yeşilyurt cd. No:132 Demir Country Sitesi İç Cadde Beylikdüzü İstanbul, Istanbul, Turkey</p>
+                <p><strong>Phone:</strong> 05455601285</p>
                 <p><strong>Email:</strong> contact@cafeistanbul.com</p>
             </div>
         </div>
