--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+    Home
+{% endblock title %}
 {% block content %}
 <section class="hero" style="background-color: rgb(5, 74, 22);">
     <div class="overlay">
