--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -6,7 +6,7 @@
 {% block content %}
 <section class="py-5">
     <div class="container">
-        <img src="{% static 'images/fragola-logo.png' %}" class="img-fluid mb-4" alt="Café Istanbul Logo">
+        <img src="{% static 'images/fragola-logo.PNG' %}" class="img-fluid mb-4" alt="Café Istanbul Logo">
         <h2 class="text-center mb-4">Fragola</h2>
         <p class="text-center">
             📍Kayaşehir Metroway Avm Karşısı
