--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,12 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-
     <!-- Header -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg ">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}"> Café Fragol</a>
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img src="{% static 'images/logo.png' %}" alt="logo" class="logo" style="height: 80px;"> <!-- لوگو به جای متن -->
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,11 +35,13 @@
         </div>
     </nav>
 
-    {% block content %}
-    {% endblock content %}
+    <div class="content">
+        {% block content %}
+        {% endblock content %}
+    </div>
 
     <!-- Footer -->
-    <footer class="footer text-center bg-dark text-white py-4">
+    <footer class="footer text-center text-white py-4">
         <div class="container">
             <div class="social-links mb-3">
                 <a href="https://www.instagram.com/fragola.tr" target="_blank" class="text-white me-3">
@@ -54,4 +57,3 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
