--- a/templates/base.html
+++ b/templates/base.html
@@ -21,17 +21,23 @@
       
           <!-- سمت چپ: لوگو و دکمه‌ها -->
           <div class="d-flex align-items-center">
-              <a class="navbar-brand me-3" href="{% url 'home' %}">
-                  <img src="{% static 'images/logo.png' %}" alt="logo" class="logo" style="height: 80px;">
-              </a>
               {% if not user.is_authenticated %}
-                  <a href="{% url 'login' %}" class="btn btn-outline-light btn-sm me-2">Login</a>
-                  <a href="{% url 'signup' %}" class="btn btn-success btn-sm">Sign Up</a>
+                <a class="navbar-brand me-3" href="{% url 'home' %}">
+                    <img src="{% static 'images/logo.png' %}" alt="logo" class="logo" style="height: 80px;">
+                </a>
+                <a href="{% url 'login' %}" class="btn btn-outline-light btn-sm me-2">Login</a>
+                <a href="{% url 'signup' %}" class="btn btn-success btn-sm">Sign Up</a>
               {% else %}
+                <a class="navbar-brand me-3" href="{% url 'home' %}">
+                    <img src="{{user.image.url}}" alt="logo" class="profile-image" style="height: 80px;">
+                </a>
+                  <a href="{% url 'profile'  %}" class="btn btn-outline-light btn-sm me-2">Profile</a>
+                  <p class="text-white me-2 welcome-text">Welcome, {{ user.username }}</p>
                   <form method="POST" action="{% url 'logout' %}">
                       {% csrf_token %}
                       <button type="submit" class="btn btn-outline-light btn-sm">Logout</button>
                   </form>
+                  
               {% endif %}
           </div>
       
