--- a/templates/articles/detail.html
+++ b/templates/articles/detail.html
@@ -11,6 +11,13 @@
         <p>{{article.description}}</p>
         <hr>
         <h5>{{article.author}}</h5>_____<h5>{{article.date}}</h5>
+        
+
+            <form action="" method="post">
+                {{form}}
+            </form>
+       
+            
     </div>
 {% endblock content %}
     
